# sk-transformers

./: .gitignore  .pre-commit-config.yaml  404.html  Brewfile  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SECURITY.md  codecov.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.cargo/: config
.github/: mergify.yml
.github/workflows/: auto-comment.yml  branch-name-check.yml  build-docs.yml  build_docs.yml  checks-testing.yml  ci.yml  code-cov.yml  codeql-analysis.yml  codeql.yml  create-ff-merge-pr.yml  deploy-package.yml  deploy_package.yml  fast-forward-pr.yml  post-release.yml  pr-check.yml  pr-title.yml  pre-commit.yml  release-drafter.yml  release.yml  testing.yml
API-reference/transformer/base_transformer/: index.html
API-reference/transformer/datetime_transformer/: index.html
API-reference/transformer/deep_transformer/: index.html
API-reference/transformer/encoder_transformer/: index.html
API-reference/transformer/generic_transformer/: index.html
API-reference/transformer/number_transformer/: index.html
API-reference/transformer/string_transformer/: index.html
API-reference/utils/: index.html
CONTRIBUTING/: index.html
docs/: CONTRIBUTING.md  README.md  base_transformer-reference.md  base_transformer.md  column_transformer-reference.md  custom_transformer-reference.md  datetime_transformer-reference.md  encoder_transformer-reference.md  encoder_transformer.md  generic_transformer-reference.md  generic_transformer.md  how_to_contribute.md  index.md  number_transformer-reference.md  number_transformer.md  reviser-reference.md  selector-reference.md  string_transformer-reference.md  string_transformer.md  transformer_index.md  utils-reference.md  utils.md
docs/API-reference/transformer/: datetime_transformer.md  deep_transformer.md
docs/stylesheets/: extra.css
examples/: playground.ipynb
feature_reviser/: __init__.py  column_transformer.py  custom_transformers.py  reviser.py  selector.py  utils.py
feature_reviser/feature_selection/: reviser.py  selector.py
feature_reviser/transformer/: column_transformer.py  custom_transformer.py  datetime_transformer.py  encoder_transformer.py  generic_transformer.py  number_transformer.py  string_transformer.py
python/sk_transformers/: __init__.py  base_transformer.py  datetime_transformer.py  generic_transformer.py  number_transformer.py  string_transformer.py  utils.py
python/tests/: conftest.py  test_utils.py
python/tests/test_transformer/: test_datetime_transformer.py  test_encoder_transformer.py  test_generic_transformer.py  test_number_transformer.py  test_string_transformer.py
search/: search_index.json
sk_transformers/: __init__.py  base_transformer.py  datetime_transformer.py  generic_transformer.py  number_transformer.py  string_transformer.py  utils.py
sk_transformers/transformer/: base_transformer.py  datetime_transformer.py  encoder_transformer.py  generic_transformer.py  number_transformer.py  string_transformer.py
src/: __init__.py  lib.rs  number_backend.rs  string_backend.rs  utils.py
src/sk_transformers/: __init__.py  base_transformer.py  datetime_transformer.py  deep_transformer.py  encoder_transformer.py  generic_transformer.py  number_transformer.py  string_transformer.py  utils.py
src/transformer/: base_transformer.py  datetime_transformer.py  generic_transformer.py  number_transformer.py  string_transformer.py
stylesheets/: extra.css
tests/: conftest.py  test_column_transformer.py  test_custom_transformer.py  test_reviser.py  test_selector.py  test_utils.py
tests/python/: test_utils.py
tests/python/test_transformer/: test_encoder_transformer.py  test_number_transformer.py  test_string_transformer.py
tests/test_feature_selection/: test_reviser.py  test_selector.py
tests/test_transformer/: test_datetime_transformer.py  test_deep_transformer.py  test_encoder_transformer.py  test_generic_transformer.py  test_number_transformer.py  test_string_transformer.py
