[package]
name = "sk-transformers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sk_transformers"
crate-type = ["cdylib"]


[dependencies]
geoutils = "0.5.1"
ndarray = "0.15.6"
numpy = "0.18.0"
pyo3 = "0.18.3"
