[tool.poetry]
name = "sk-transformers"
version = "0.6.0"
description = "A collection of various pandas & scikit-learn compatible transformers for all kinds of preprocessing and feature engineering"
authors = ["Christopher Lemke <chris@syhbl.mozmail.com>"]
license = "MIT"
readme = "docs/README.md"
packages = [{ include = "sk_transformers", from = "src" }]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Intended Audience :: Science/Research",
]
keywords = [
    "feature engineering",
    "preprocessing",
    "pandas",
    "scikit-learn",
    "transformer",
    "pipelines",
    "machine learning",
    "data science",
    "artificial intelligence"
]
homepage = "https://chrislemke.github.io/sk-transformers/"
documentation = "https://chrislemke.github.io/sk-transformers/"
repository = "https://github.com/chrislemke/sk-transformers/"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"

joblib = "1.2.0"
numpy = "1.23.5"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
feature-engine = "^1.5.2"
phonenumbers = "^8.13.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "4.0.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^22.12.0"}
bandit = "^1.7.4"
isort = "^5.11.4"
mypy = "^0.991"
pylint = "^2.15.9"
pre-commit = "^2.20.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "1.4.2"
mkdocstrings = {extras = ["python"], version = "0.19.1"}
mkdocs-material = "8.5.11"

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.test]
optional = true

[tool.poetry.group.docs]
optional = true

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.pylint.messages_control]
disable = [
    "C0301",
    "C0103",
    "C0114",
    "E0401",
    "R0903",
    "R0913",
    "R0914",
    ]

[tool.pylint.format]
max-line-length = 88

[tool.mypy]
strict = true
disallow_subclassing_any = false
ignore_missing_imports = true
disallow_any_generics = false
warn_return_any = false
no_namespace_packages = true
exclude = ["tests", "docs"]

[tool.black]
target-version = ['py311']


[tool.isort]
profile = "black"
skip_glob = ["docs/*"]
src_paths = ["src/sk_transformers", "tests"]
extend_skip = [".md", ".yml", ".yaml"]
