[tool.poetry]
name = "sk-transformers"
version = "0.9.0"
description = "A collection of various pandas & scikit-learn compatible transformers for all kinds of preprocessing and feature engineering"
authors = ["Christopher Lemke <1@lemke.ai>"]
license = "MIT"
readme = "docs/README.md"
packages = [{ include = "sk_transformers", from = "src" }]
include = ["CHANGELOG.md"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Pre-processors",
    "Typing :: Typed",
]
keywords = [
    "feature engineering",
    "preprocessing",
    "pandas",
    "scikit-learn",
    "transformer",
    "pipelines",
    "machine learning",
    "data science",
    "artificial intelligence"
]
homepage = "https://chrislemke.github.io/sk-transformers/"
documentation = "https://chrislemke.github.io/sk-transformers/"
repository = "https://github.com/chrislemke/sk-transformers/"

[tool.poetry.urls]
Changelog = "https://github.com/chrislemke/sk-transformers/blob/main/CHANGELOG.md"
Issues = "https://github.com/chrislemke/sk-transformers/issues"
Discussions = "https://github.com/chrislemke/sk-transformers/discussions"
Contributing = "https://github.com/chrislemke/sk-transformers/blob/main/docs/CONTRIBUTING.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

feature-engine = "^1.5.2"
ipywidgets = "^8.0.4"
joblib = "1.2.0"
numpy = "1.23.5"
pandas = "^1.5.2"
phonenumbers = "^8.13.4"
pytorch-widedeep = "1.2.1"
scikit-learn = "^1.2.0"
swifter = "^1.3.4"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "4.0.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
black = {extras = ["jupyter"], version = "^22.12.0"}
isort = "^5.11.4"
mypy = "^0.991"
nbstripout = "^0.6.1"
pre-commit = "^2.21.0"
pylint = "^2.15.10"
ssort = "^0.11.6"

[tool.poetry.group.docs.dependencies]
mkdocs = "1.4.2"
mkdocstrings = {extras = ["python"], version = "0.19.1"}
mkdocs-material = "9.0.2"

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.test]
optional = true

[tool.poetry.group.docs]
optional = true

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.pylint.messages_control]
disable = [
    "C0301",
    "C0103",
    "C0114",
    "E0401",
    "R0902",
    "R0903",
    "R0913",
    "R0914",
    "W0201",
    ]

[tool.pylint.format]
max-line-length = 88

[tool.mypy]
strict = true
disallow_subclassing_any = false
ignore_missing_imports = true
disallow_any_generics = false
warn_return_any = false
no_namespace_packages = true
exclude = ["tests", "docs"]

[tool.black]
target-version = ['py311']

[tool.isort]
profile = "black"
skip_glob = ["docs/*"]
src_paths = ["src/sk_transformers", "tests"]
extend_skip = [".md", ".yml", ".yaml"]
