[project]
name = "sk-transformers"
readme = "docs/README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
version = "0.10.3"
description = "A collection of various pandas & scikit-learn compatible transformers for all kinds of preprocessing and feature engineering"
authors = [
  {email = "1@lemke.ai"},
  {name = "Chris Lemke"}
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Pre-processors",
    "Typing :: Typed",
]
keywords = [
    "feature engineering",
    "preprocessing",
    "pandas",
    "scikit-learn",
    "transformer",
    "pipelines",
    "machine learning",
    "data science",
    "artificial intelligence"
]

dependencies = [
    "feature-engine ~=1.5.2",
    "ipywidgets ~=8.0.4",
    "joblib ~=1.2.0",
    "numpy ~=1.23.5",
    "pandas ~=1.5.2",
    "phonenumbers ~=8.13.4",
    "scikit-learn ~=1.2.0",
    "polars ~=0.16.7",
    "pyarrow ~=11.0.0",
]

[project.optional-dependencies]
test = [
    "pytest ~=7.2.0",
    "pytest-cov ~=4.0.0"
]

dev = [
    "black[jupyter]",
    "bandit ~=1.7.4",
    "mypy ~=1.0.0",
    "ruff ~=0.0.262",
    "pre-commit ~=3.0.4",
    "nbstripout ~=0.6.1",
    "ssort ~=0.11.6",
    "maturin ~=0.14.17",
]

docs = [
    "mkdocs ==1.4.2",
    "mkdocstrings[python] ==0.19.1",
    "mkdocs-material ==9.0.2",
]

[project.urls]
homepage = "https://chrislemke.github.io/sk-transformers/"
documentation = "https://chrislemke.github.io/sk-transformers/"
repository = "https://github.com/chrislemke/sk-transformers/"
Changelog = "https://github.com/chrislemke/sk-transformers/blob/main/CHANGELOG.md"
Issues = "https://github.com/chrislemke/sk-transformers/issues"
Discussions = "https://github.com/chrislemke/sk-transformers/discussions"
Contributing = "https://github.com/chrislemke/sk-transformers/blob/main/docs/CONTRIBUTING.md"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.ruff]
ignore = ["E501"]
line-length = 88
target-version = "py38"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "workflow/src/libs/",
]

[tool.mypy]
strict = true
disallow_subclassing_any = false
ignore_missing_imports = true
disallow_any_generics = false
warn_return_any = false
warn_unused_ignores = false
no_namespace_packages = true
exclude = ["tests", "docs"]
